# BOOK_TRANSLATOR

./: .gitignore  colorful_print.py  main.py  psi_prblm_btw_15_25.json  psikolojik_problem_data.json  pyproject.toml
epubs/processed/: austen-pride-and-prejudice-illustrations.epub  lewis-magician-s-nephew.epub  shelley-frankenstein.epub
epubs/translated/: austen-pride-and-prejudice-illustrations.epub  lewis-magician-s-nephew.epub  shelley-frankenstein.epub
epubs/translation_maps/: austen-pride-and-prejudice-illustrations.json  lewis-magician-s-nephew.json  shelley-frankenstein.json
mockups/: epub_check.py  epub_reader.py  full_example.py  newbookgenerator.py  translator.py
