[project]
name = "book-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "matteog",email = "m3@m3x.com"}
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "redis (>=7.1.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
